# Mercurius

./: #meson.build#  .#meson.build  .gitignore  README.md  meson.build  meson.build~
src/: meson.build
src/client/: meson.build
src/main/server/: .#meson.build
src/model/: meson.build
src/server/: main.c  meson.build  server.c
src/test/: meson.build~  test_main.c  test_server.c
test/: #meson.build#  .#meson.build  meson.build
test/client/: meson.build  test_client.c
test/model/: meson.build  test_connection.c
test/server/: meson.build
