model_sources = files(                                                                                                                               
'connection.c'                                                                                                                                            
)                                                                                                                                                     
executable('irc_model', model_sources)                                                                                                              
test_executable = executable('test_model','../../test/model/test_connection.c')                                                                         
                                                                                                                                                      
test('unit_test', test_executable)
